--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,14 @@ plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+    id("com.google.dagger.hilt.android") version "2.44" apply false
 }
+
+
+    ext {
+        coroutines = '1.5.2'
+        lifecycleVersion = '2.4.0'
+        roomVersion = '2.3.0'
+    }
+
+
