--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,9 @@ dependencies {
     //coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
 
+    // Kotlin fragment
+    implementation 'androidx.fragment:fragment-ktx:1.6.1'
+
 
 }
 
